--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main {
     background-color: white;
 
     width: 100%;
-    height: auto;
+    /* height: 600px; */
 
     border-radius: 20px;
 
@@ -45,6 +45,9 @@ main {
 /* =============================================================================
   #CONTENT
 ============================================================================= */
+section {
+    padding: 10px;
+}
 
 .main-img {
     display: block;
@@ -162,10 +165,12 @@ button {
     padding: 15px 70px;
     border-radius: 10px;
 
-    position: relative;
+    width: 100%;
+
+    /* position: relative;
     bottom: unset;
     left: unset;
-    right: unset;
+    right: unset; */
 }
 
 .cancel-button {
@@ -179,8 +184,10 @@ button {
 
     padding: 15px 70px;
 
-    position: relative;
+    width: 100%;
+
+    /* position: relative;
     bottom: unset;
     left: unset;
-    right: unset;
+    right: unset; */
 }
